   report by Nicolás Ojeda Bär)

- #10147, #10148: Fix building runtime with GCC on macOS.
  (David Allsopp, report by John Skaller)

- #10166: Fix illegal permutation error reporting in module aliases.
  (Matthew Ryan, review by Florian Angeletti)

- #10189, #10190, #10347: Universal variables leaking through GADT equations
  (Jacques Garrigue, report and review by Leo White)

- #10253, #10373: tweak error message for unknown variant constructors
  or record fields in type-directed disambiguation
  (Florian Angeletti, report by Hongbo Zhang, review by Gabriel Scherer)

* #10277, #10383: Need to detect ambiguity recursively inside types to
  guarantee principality (affects only principal mode)
  (Jacques Garrigue, review by Thomas Refis, Leo White and Kate Deplaix)

- #10283, #10284: Enforce right-to-left evaluation order for Lstaticraise
  (Vincent Laviron, report by Github user Ngoguey42, review by Gabriel Scherer)

- #10298, #10305: Incorrect propagation of type equalities in functor
  application
  (Jacques Garrigue, report and review by Didier Remy)

- #10324, #10325: Prevent generation of Lsend(Cached, _) in bytecode
  (Vincent Laviron, report by Yawar Amin and Nicolás Ojeda Bär, review by
   Jacques Garrigue)

- #10338, #10340: Translcore.push_defaults does not respect scoping
  (Jacques Garrigue, report and review by Stephen Dolan)

- #10351: Fix DLL loading with binutils 2.36+ on mingw-w64
  (David Allsopp, review by Nicolás Ojeda Bär)

- #10339, #10354, #10387: Fix handling of exception-raising specific
  operations during spilling and liveness analysis.
  (This bug affects ARM and ARM64.)
  In passing, refactor Proc.op_is_pure and Mach.operation_can_raise.
  (Xavier Leroy, report by Richard Bornat, review by Stephen Dolan
   and Mark Shinwell)

- #10371: no longer generatd useless `.cds` file when using
  `-output-complete-exe`.
  (Nicolás Ojeda Bär, review by David Allsopp)

- #10376: Link runtime libraries correctly on msvc64 in -output-complete-obj