@@ -150,16 +150,14 @@ camlinternalLazy.cmx : \
     camlinternalLazy.cmi
 camlinternalLazy.cmi :
 camlinternalMod.cmo : \
-    stdlib__Sys.cmi \
     stdlib__Obj.cmi \
-    stdlib__Nativeint.cmi \
+    stdlib__Lazy.cmi \
     camlinternalOO.cmi \
     stdlib__Array.cmi \
     camlinternalMod.cmi
 camlinternalMod.cmx : \
-    stdlib__Sys.cmx \
     stdlib__Obj.cmx \
-    stdlib__Nativeint.cmx \
+    stdlib__Lazy.cmx \
     camlinternalOO.cmx \
     stdlib__Array.cmx \
     camlinternalMod.cmi
